# skrillax

./: .env.example  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yml.example  sqlx-data.json
.github/: dependabot.yml
.sqlx/: query-08e5853e3d1ebda86a8e9691087d5a7a7a118532e1ef86c03c81a16f300180e0.json  query-09a11418117d5182992d4606e13e7902c768b1ec7969094b2a92c2f061cd9bb1.json  query-0cc5c4601f56468f8b198507236a3fd5ddd712b9a7e5c4eee3e711ce35d4e262.json  query-0cfcbb89978b491695dbb5868b4c0cf80bb6b421fe1cac99636eb43e7c4d1aae.json  query-134a6fdeec1763e75b9634f35dd41a4356e316054d40954c5a048980e7b34426.json  query-177c963161e404e6961f097a33f89ae93761bb13833c8d38eaf06108d981bafc.json  query-18affd6bea810567d982f07b4969440304c5566778f8798aa5856f13cd8e994c.json  query-1a4a9a3fb9bfc2d72d9827c532f2a1d4e1a951c2308a0ed5e15bfb8e099db7e1.json  query-1c2d30bbd50763594c7e5d08776deb93663c58fee10a6feb6e4e31fa206d0335.json  query-22d166c39ec367feaaad056fe3dbf10fac7dff9960bb14a77d4c8503f721e81a.json  query-2372b7af24957b6302f6dbd7b071f0c99b57cdc8c7cdc8515e4c9d8271021790.json  query-2584a111d5bde33ddead0194f36a37d85790566ce7c187b14b08594ac0528a1f.json  query-3072e621443a3816da8f09103ea5c08fdd8511bba1c20217f2ade1b3e8e8aae9.json  query-34effd3541e1e989208a02a76de6cd40ffd85def57cd9586432a35b45fa5f0bb.json  query-3c9d895da29be79c6c48fa3ae4690c3eb16fbd770582ea8931358c7d3143efe1.json  query-3cf43fad2c06de8a709c4ad441fc9590011901bc55eacb0e4d31b4f2988a4cd9.json  query-4017b3cff1ee8821720170787f6974a69bf3dce2087c08a4219ba5e38dbc1aa3.json  query-473083826e7c774025f6104f56173ecdb8a62175ddd828f5faa1998a0b0f58df.json  query-4843302533ebcd88a714c7eba0d1c5a0bc6a7b6d8486e7b22afe694463477cfe.json  query-4b4a33f133ede745f060b20209972f5a63ee4fa2c59d21603126ab7dcfa89f9d.json  query-50d03f2f7db99a1102fbc5facb0989889c84e1d8b3300a14548b470ef0ac51eb.json  query-50da8fd16cfcd0d94bd24407ce30c4dcac859471cf0164242b898ac0679fb2df.json  (+20 more)
configs/: agent_server.toml  (+1 more)
crates/silkroad-data/: Cargo.toml
crates/silkroad-data/src/: characterdata.rs  common.rs  datamap.rs  gold.rs  itemdata.rs  level.rs  lib.rs  masterydata.rs  npc_pos.rs  skilldata.rs  teleport.rs
crates/silkroad-definitions/: Cargo.toml
crates/silkroad-definitions/src/: inventory.rs  lib.rs  region.rs
crates/silkroad-gateway-protocol/: Cargo.toml
db/: setup.sql  (+3 more)
silkroad-agent/: Cargo.toml  README.md
silkroad-agent/conf/: default.toml
silkroad-agent/src/: character_loader.rs  config.rs  executor.rs  ext.rs  game.rs  id_allocator.rs  job_coordinator.rs  main.rs  math.rs  network.rs  player_loader.rs  protocol.rs  resources.rs  server_plugin.rs  settings.rs  tasks.rs  time.rs  web.rs
silkroad-agent/src/agent/: component.rs  event.rs  goal.rs  mod.rs  state.rs  states.rs  system.rs
silkroad-agent/src/agent/states/: action.rs  dead.rs  idle.rs  movement.rs  sitting.rs
silkroad-agent/src/chat/: mod.rs  system.rs
silkroad-agent/src/chat/command/: mod.rs  system.rs
silkroad-agent/src/cmd/: mod.rs
silkroad-agent/src/comp/: damage.rs  drop.rs  exp.rs  gold.rs  inventory.rs  mastery.rs  mod.rs  monster.rs  net.rs  npc.rs  player.rs  pos.rs  skill.rs  spawner.rs  stats.rs  sync.rs  visibility.rs
silkroad-agent/src/db/: character.rs  job.rs  mod.rs  server.rs  user.rs
silkroad-agent/src/event/: mod.rs
silkroad-agent/src/game/: action.rs  attack.rs  chat.rs  damage.rs  daylight.rs  drop.rs  entity_sync.rs  exp.rs  gm.rs  gold.rs  handlers.rs  hotbar.rs  inventory.rs  join.rs  levelup.rs  logout.rs  mastery.rs  mind.rs  mod.rs  movement.rs  player_activity.rs  spawn.rs  stats.rs  target.rs  unique.rs  visibility.rs  world.rs
silkroad-agent/src/input/: component.rs  mod.rs  system.rs
silkroad-agent/src/login/: character_loader.rs  charselect.rs  components.rs  job_distribution.rs  jobs.rs  login.rs  mod.rs  web.rs
silkroad-agent/src/mall/: db.rs  event.rs  mod.rs  system.rs
silkroad-agent/src/net/: in_game.rs  login.rs  mod.rs  net.rs
silkroad-agent/src/persist/: comp.rs  mod.rs  sys.rs
silkroad-agent/src/persistence/: apply.rs  mod.rs
silkroad-agent/src/population/: capacity.rs  mod.rs  queue.rs
silkroad-agent/src/sync/: mod.rs  reset.rs  system.rs
silkroad-agent/src/sys/: charselect.rs  in_game.rs  login.rs  mod.rs  movement.rs  net.rs  visibility.rs
silkroad-agent/src/world/: data.rs  lookup.rs  mod.rs  spawning.rs
silkroad-codegen/: Cargo.toml  README.md
silkroad-codegen/src/: code_container.rs  context.rs  definition.rs  file_header.in  main.rs  reader.rs  structure.rs  stuct_like.rs  writer.rs
silkroad-data/: Cargo.toml
silkroad-data/src/: characterdata.rs  common.rs  datamap.rs  entity_rarity.rs  gold.rs  itemdata.rs  level.rs  lib.rs  masterydata.rs  npc_pos.rs  num_ext.rs  skilldata.rs  type_id.rs
silkroad-definitions/: Cargo.toml
silkroad-definitions/src/: rarity.rs
silkroad-game-base/: Cargo.toml
silkroad-game-base/src/: changes.rs  character.rs  inventory.rs  lib.rs  movement.rs  pos.rs  skill.rs  stats.rs  vec.rs
silkroad-gateway/: Cargo.toml  README.md
silkroad-gateway/conf/: default.toml
silkroad-gateway/src/: agentserver.rs  cli.rs  client.rs  config.rs  login.rs  main.rs  news.rs  passcode.rs  patch.rs  protocol.rs  server.rs
silkroad-navmesh/: Cargo.toml
silkroad-navmesh/src/: heightmap.rs  lib.rs  map_info_ext.rs  navmesh.rs  navmesh_ext.rs  object.rs  object_info.rs  object_mesh.rs  region.rs
silkroad-network/: Cargo.toml
silkroad-network/src/: codec.rs  display.rs  frame.rs  lib.rs  security_setup.rs  server.rs  sid.rs  stream.rs
silkroad-packet-decryptor/: Cargo.toml  README.md
silkroad-packet-decryptor/src/: main.rs
silkroad-protocol/: Cargo.toml
silkroad-protocol/src/: auth.rs  character.rs  chat.rs  combat.rs  community.rs  error.rs  general.rs  gm.rs  inventory.rs  lib.rs  login.rs  movement.rs  size.rs  skill.rs  spawn.rs  world.rs
silkroad-security/: Cargo.toml  README.md
silkroad-security/src/: lib.rs  passcode.rs  security.rs
silkroad-serde/: Cargo.toml  README.md
silkroad-serde/src/: error.rs  lib.rs  time.rs
(+53 files in other folders)
