[workspace]
members = [
    "silkroad-network",
    "silkroad-protocol",
    "silkroad-gateway",
    "silkroad-rpc",
    "silkroad-security",
    "silkroad-agent",
    "silkroad-navmesh",
    "silkroad-serde",
    "silkroad-serde-derive",
    "silkroad-data",
    "silkroad-packet-decryptor",
    "silkroad-game-base",
    "silkroad-definitions"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.32", features = ["full"] }
once_cell = "1.18"
byteorder = "1.4"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13"
log = "0.4"
thiserror = "1.0"
chrono = "0.4"
bytes = "1.5"
clap = "4.4"
pk2 = "0.1.0"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }

[profile.dev]
opt-level = 1