[workspace]
members = [
    "silkroad-protocol",
    "silkroad-gateway",
    "silkroad-rpc",
    "silkroad-agent",
    "silkroad-navmesh",
    "silkroad-data",
    "silkroad-game-base",
    "silkroad-definitions",
    "skrillax-server",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.34", features = ["full"] }
once_cell = "1.18"
byteorder = "1.5"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.14"
log = "0.4"
thiserror = "1.0"
chrono = "0.4"
bytes = "1.8"
clap = "4.4"
pk2 = "0.1.0"
skrillax-protocol = "0.2"
skrillax-packet = "0.3"
skrillax-serde = "0.2"
skrillax-stream = "0.2"
skrillax-security = "0.1"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
] }
color-eyre = "0.6"

[profile.dev]
opt-level = 1

[profile.dev.package.backtrace]
opt-level = 3