[workspace]
members = [
    "silkroad-gateway",
    "silkroad-agent",
    "crates/*",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
once_cell = "1.20"
byteorder = "1.5"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.15"
log = "0.4"
thiserror = "2.0"
chrono = "0.4"
bytes = "1.8"
clap = "4.5"
pk2 = "0.3"
pk2-sync = "0.1"
skrillax-protocol = "0.2"
skrillax-packet = "0.3"
skrillax-serde = "0.2"
skrillax-stream = "0.2"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
] }
color-eyre = "0.6"

[profile.dev]
opt-level = 1

[profile.dev.package.backtrace]
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true
