[package]
name = "silkroad-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber.workspace = true
silkroad-protocol = { path = "../crates/silkroad-protocol" }
silkroad-rpc = { path = "../crates/silkroad-rpc" }
silkroad-navmesh = { path = "../crates/silkroad-navmesh", features = ["pk2"] }
silkroad-data = { path = "../crates/silkroad-data" }
silkroad-game-base = { path = "../crates/silkroad-game-base" }
silkroad-definitions = { path = "../crates/silkroad-definitions" }
skrillax-server = { path = "../crates/skrillax-server" }
skrillax-protocol.workspace = true
skrillax-stream.workspace = true
tokio.workspace = true
axum = { version = "0.7", default-features = false, features = [
    "http1",
    "json",
    "tokio",
    "tower-log",
    "macros",
] }
once_cell.workspace = true
rand.workspace = true
tracing.workspace = true
config.workspace = true
sqlx.workspace = true
log.workspace = true
serde.workspace = true
thiserror.workspace = true
chrono.workspace = true
itertools = "*"
bevy_ecs = "0.15"
bevy_ecs_macros = "0.15"
bevy_core = "0.15"
bevy_app = "0.15"
bevy_tasks = "0.15"
bevy_time = "0.15"
cgmath = "0.18"
pk2.workspace = true
id-pool = { version = "0.2", features = ["u32"], default-features = false }
derive_more = "0.99.17"
futures = "0.3"
gumdrop = "0.8.1"
