[package]
name = "silkroad-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
codegen = { git = "https://github.com/gregdhill/codegen", branch = "associated-consts" }
quick-xml = { version = "0.22.0", features = ["serialize"] }