[package]
name = "silkroad-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pk2 = { workspace = true }
thiserror = { workspace = true }
encoding_rs = "0.8"
num_enum = "0.6.1"
num_enum_derive = "0.6.1"
bitflags = "2.3"