[package]
name = "silkroad-definitions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silkroad-serde = { path = "../silkroad-serde" }
num_enum = "0.6.1"
num_enum_derive = "0.6.1"
byteorder = { workspace = true }
bytes = { workspace = true }