[package]
name = "silkroad-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
log = { workspace = true, default-features = false }
chrono = { workspace = true }
crossbeam-channel = "0.5"
tokio = { workspace = true }
tokio-util = "0.7.3"
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
silkroad-network = { path = "../silkroad-network" }
silkroad-protocol = { path = "../silkroad-protocol" }
silkroad-rpc = { path = "../silkroad-rpc" }
silkroad-security = { path = "../silkroad-security" }
reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls-tls"] }
clap = { workspace = true, features = ["derive"] }
anyhow = "1.0.69"
bcrypt = "0.14.0"