[package]
name = "silkroad-gateway"
version = "0.1.0"
edition = "2021"

[features]
default = ["v657"]
v594 = ["silkroad-protocol/v594"]
v657 = ["silkroad-protocol/v657"]

[dependencies]
config = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
crossbeam-channel = "0.5"
tokio = { workspace = true }
tokio-util = "0.7"
bytes = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = "1.19"
sqlx = { workspace = true }
silkroad-protocol = { path = "../silkroad-protocol", default-features = false }
skrillax-server = { path = "../skrillax-server" }
silkroad-rpc = { path = "../silkroad-rpc" }
skrillax-protocol.workspace = true
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
clap = { workspace = true, features = ["derive"] }
bcrypt = "0.15"
blowfish = "0.9"
color-eyre = { workspace = true }
