[package]
name = "silkroad-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
bytes = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = "1.20"
sqlx = { workspace = true }
silkroad-gateway-protocol = { path = "../crates/silkroad-gateway-protocol" }
skrillax-server = { path = "../crates/skrillax-server" }
silkroad-rpc = { path = "../crates/silkroad-rpc" }
skrillax-protocol.workspace = true
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
clap = { workspace = true, features = ["derive"] }
bcrypt = "0.17"
blowfish = "0.9"
color-eyre = { workspace = true }
