[package]
name = "silkroad-network"
version = "0.1.0"
edition = "2021"

[dependencies]
blowfish-compat = { git = "https://aura.eternalwings.de/tim/blowfish-compat.rs.git", branch = "master" }
bytes = { workspace = true }
byteorder = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "sync", "macros", "rt"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
silkroad-protocol = { path = "../silkroad-protocol" }
silkroad-security = { path = "../silkroad-security" }
crossbeam-channel = "0.5.2"
futures = "0.3.21"