[package]
name = "silkroad-packet-decryptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silkroad-security = { path = "../silkroad-security" }
silkroad-network = { path = "../silkroad-network" }
silkroad-protocol = { path = "../silkroad-protocol" }
pcap-file = "1.1.1"
pktparse = "0.7.1"
byteorder = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
env_logger = "0.10"
log = { workspace = true }
num_cpus = "1"