[package]
name = "silkroad-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
silkroad-definitions = { path = "../silkroad-definitions", features = ["serde"] }
silkroad-serde = { path = "../silkroad-serde", features = ["derive"] }