[package]
name = "silkroad-protocol"
version = "0.1.0"
edition = "2021"

[features]
default = ["v657"]
v657 = []
v594 = []

[dependencies]
byteorder = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
silkroad-definitions = { path = "../silkroad-definitions", features = [
    "serde",
] }
skrillax-serde = { workspace = true, features = [
    "derive",
] }
skrillax-packet = { workspace = true, features = [
    "derive",
] }
skrillax-protocol.workspace = true
