[package]
name = "silkroad-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
silkroad-definitions = { path = "../silkroad-definitions", features = [
    "serde",
] }
skrillax-serde = { workspace = true, features = [
    "derive",
] }
skrillax-packet = { workspace = true, features = [
    "derive",
] }
skrillax-protocol.workspace = true
silkroad-base-protocol = { path = "../silkroad-base-protocol" }