[package]
name = "silkroad-security"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blowfish-compat = { path = "../blowfish-compat.rs" }
bytes = "*"
rand = "*"
tracing = "*"
thiserror = "*"
byteorder = "*"