[package]
name = "silkroad-definitions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skrillax-serde = { workspace = true, optional = true }
num_enum = "0.7"
num_enum_derive = "0.7"
byteorder = { workspace = true }
bytes = { workspace = true }

[features]
serde = ["dep:skrillax-serde"]
